optimized mobjs. started using intellijs profiler. what a gamechanger. run your tests, and it highlights where the code is slow. go there and make it fast, rinse and repeat. was able to get a massive zigbee2mqtt machine to drop from 2minutes to 11 seconds. Had it at 2 seconds, but two test cases are failing with that code... have it commented and will look into it later.